--- a/my_resume/2023/resume_2023.tex
+++ b/my_resume/2023/resume_2023.tex
@@ -135,6 +135,7 @@
 
 {\customcventry{2019/04 - present}{Senior Data Scientist}{Seeloz Inc}{San Jose, CA}{}
 {\begin{itemize}
+\item Analyzed and built a NLP model using the Bill of Materials (BOM) and Product tables to identify the product categories. This model can category raw materials, semi-finished goods, and finished goods with 98\% to 99\% accuracy.
 % \item Developed and maintained the essential deep-Q learning network (DQN) models in SCAS Autonomous Procurement \& Inventory (AP\&I) platform to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
 % \item Developed and maintained the essential deep-Q learning network (DQN) models for inventory control to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
 \item Developed and deployed a deep-Q learning neural network (DQN) in reinforcement learning, which optimizes the supply chain management and provides recommendations to customers. This DQN model helps customers saving \$2.05M in the inventory costs and increasing 44\% annual turnover rate.
