--- a/my_resume/2023/resume_2023.tex
+++ b/my_resume/2023/resume_2023.tex
@@ -121,13 +121,13 @@
 {
 \begin{itemize}
   \item \textbf{Programming}: Python, SQL, Spark, C/C++, Bash shell script, Scala, VBA
-  \item \textbf{Machine learning}: scikit-learn, Keras, TensorFlow, PyTorch, time series forecast, anomaly detection, NLP, recommendation system, reinforcement learning (Gym, Stable-Baselines, Ray)
+  \item \textbf{Machine learning}: scikit-learn, Keras, TensorFlow, PyTorch, time series forecast, anomaly detection, NLP, recommendation system, deep learning, reinforcement learning (Gym, Stable-Baselines, Ray)
   % \item \textbf{Reinforcement learning}: Gym, Stable-Baselines, Ray, 
   % \item \textbf{Database}: SQL, Big Query, PostgreSQL, TablePlus, Incorta,
-  \item \textbf{Visualization \& Dashboard}: matplotlib, seaborn, dash, bokeh, DataStudio, Tableau, Power BI
-  \item \textbf{Big Data}: Apache Hadoop, Hive, Cloudera
-  \item \textbf{Cloud}: GCP, Azure, AWS
-  \item \textbf{Others}: Git, Jira, Docker, Jupyter Notebooks, Jupyter Lab, Visual Studio Code,, anaconda, A/B test, Monte Carlo simulation
+  \item \textbf{Visualization \& Dashboard}: matplotlib, seaborn, dash, bokeh, Google DataStudio, Tableau, Power BI
+  \item \textbf{Cloud \& Big Data Ecosystem}: GCP, Azure, AWS, Hadoop, Hive, Cloudera
+  % \item \textbf{Cloud}: 
+  \item \textbf{Others}: Git, Jira, Docker, Jupyter Notebooks/Lab, Visual Studio Code, Anaconda, A/B test, Monte Carlo simulation
 \end{itemize}
 }
 
@@ -135,17 +135,17 @@
 
 {\customcventry{2019/04 - present}{Senior Data Scientist}{Seeloz Inc}{San Jose, CA}{}
 {\begin{itemize}
-\item Analyzed and built a NLP model using the Bill of Materials (BOM) and Product tables to identify the product categories. This model can category raw materials, semi-finished goods, and finished goods with 98\% to 99\% accuracy.
+% \item Analyzed and built a NLP model using the Bill of Materials (BOM) and Product tables to identify the product categories. This model can category raw materials, semi-finished goods, and finished goods with 98\% to 99\% accuracy.
 % \item Developed and maintained the essential deep-Q learning network (DQN) models in SCAS Autonomous Procurement \& Inventory (AP\&I) platform to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
 % \item Developed and maintained the essential deep-Q learning network (DQN) models for inventory control to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
-\item Developed and deployed a deep-Q learning neural network (DQN) in reinforcement learning, which optimizes the supply chain management and provides recommendations to customers. This DQN model helps customers saving \$2.05M in the inventory costs and increasing 44\% annual turnover rate.
+\item Developed and deployed a deep-Q learning neural network (DQN) in reinforcement learning, which optimizes the supply chain management, and provides recommendations to customers. This DQN model helps customers saving \$2.05M in the inventory costs and increasing 44\% annual turnover rate.
 %\item Reduced the inventory levels 30\% $\sim$ 70\%, which varies by warehouses and products, and retained low stock-outs by introducing the purchase-procurement splitting and postponed action methods into the model-based reinforcement learning (RL).
 % \item Applied the time series analysis and forecasting methods using Python and predicted customers' demands and orders. The models been used including ETS, ARIMA/SARIMA, VAR, long-short term memory (LSTM), and double random forest (double RF). The $r^2$ score was improved from 0.15 (using ETS model) up to 0.92 (using double RF) and the number of supported products have been increased by a factor of 20 times.
 % \item Migrated the AP\&I platform from Stable-Baselines to Ray.
 % \item Analyzed supply chain data from various clients by writing SQL queries on the Google Big Query and PostgreSQL. 
 \item Analyzed customers' supply chain data using SQL/Python/Spark and built ensemble models for time series forecasting using ETS/ARIMA/RandomForest/XGboost/LSTM. The model accuracy ranges from 93\% to 100\% for various products for different customers.
 %\item Built interactive dashboards for visualizations and quick inspections. The dashboards were constructed on the Google DataStudio at the beginning, and then ported to Python with Bokeh package now.
-\item Built interactive dashboards for visualizations using Google DataStudio and Dash, which is a Python package from Plotly. The dashboards not only visualize data but also summarize key metrics, present prediction results and analytical outcomes. 
+\item Built interactive dashboards for visualizations using Google DataStudio and Python Dash package. The dashboards not only visualize data but also summarize key metrics, present prediction results and analytical outcomes. 
 % \item Implemented an abstraction layer (API), called Cloud I/O, on top of Azure and GCP to access the Azure storage account and Google Cloud storage. This Python-based API provides the AP\&I cross-platform functionalities.
 % \item Designed a Python-based universal interface to submit batch jobs to Google AI platform, GKE, Azure VMSS, Azure ML, AKS, on-premises cluster, and local docker container.
 \item Implemented an abstraction layer (API) on top of 3 major cloud platforms (GCP, Azure, and AWS) to access the cloud storage. This Python-based API provides the AP\&I cross-platform functionalities.
@@ -162,7 +162,8 @@
 % \item Built a time-series model for a seasonal product category to test, compare and validate supply chain team’s predictions.
 % \item Prepared structural databases to build complex data frames for team usage and provided complex business analytics, measures, visuals and insights from raw data for assortment planning management to make knowledgeable and data-driven decisions.
 % \item Designed machine learning and predictive models to test and verify the store market area definitions to the rolling-12 month collected data. This project involved data modeling and machine learning algorithm (training, testing and scoring) implementation using various predictive algorithms such as decision trees, random forest, etc.
-% \item Worked cross-functionally with product manager, data engineer, and data solution architects, to design and deliver advanced analytic solutions
+\item Led ML projects in reinforcement learning and time series forecasting to deliver real time models. Led visualization project to ship interactive dashboards. Led engineer project to develop universal API for accessing cloud storage from different cloud platforms.
+\item Worked cross-functionally with product managers, data engineers, and data architects, to design and deliver large-scale advanced analytic solutions
 \item Mentored less experienced data scientists in the team and helped them to fix issues in projects.
 \end{itemize}
 }
