--- a/my_resume/2023/resume_2023.tex
+++ b/my_resume/2023/resume_2023.tex
@@ -120,14 +120,14 @@
 \section{SKILLS}
 {
 \begin{itemize}
-  \item \textbf{Programming}: Python, SQL, Spark, C/C++, Bash shell script, Scala, VBA
-  \item \textbf{Machine learning}: scikit-learn, Keras, TensorFlow, PyTorch, time series forecast, anomaly detection, NLP, recommendation system, deep learning, reinforcement learning (Gym, Stable-Baselines, Ray)
-  % \item \textbf{Reinforcement learning}: Gym, Stable-Baselines, Ray, 
-  % \item \textbf{Database}: SQL, Big Query, PostgreSQL, TablePlus, Incorta,
-  \item \textbf{Visualization \& Dashboard}: matplotlib, seaborn, dash, bokeh, Google DataStudio, Tableau, Power BI
-  \item \textbf{Cloud \& Big Data Ecosystem}: GCP, Azure, AWS, Hadoop, Hive, Cloudera
-  % \item \textbf{Cloud}: 
-  \item \textbf{Others}: Git, Jira, Docker, Jupyter Notebooks/Lab, Visual Studio Code, Anaconda, A/B test, Monte Carlo simulation
+    \item \textbf{Programming}: Python, SQL, C/C++, Spark, Scala, Bash shell script, VBA,
+    \item \textbf{Machine learning, Deep learning, Reinforcement learning}: Scikit-learn, Keras, TensorFlow, PyTorch, Gym, Stable-Baselines, Ray,
+    \item \textbf{Analysis \& Modeling}: ETL, EDA, Predictive modeling, Time series forecast, Anomaly detection, Monte Carlo simulation, RandomForest, XGBoost, LightGBM, LSTM, clustering, %NLP, Recommendation systems, Hypothesis test, A/B test, 
+    \item \textbf{Database}: SQL, Big Query, PostgreSQL, Incorta,
+    \item \textbf{visualization}: Matplotlib, Seaborn, Dash, Bokeh, Google DataStudio, Tableau, Power BI,
+    \item \textbf{Cloud}: Google Cloud Platform, Microsoft Azure, Amazon AWS, Cloudera,
+    \item \textbf{Others}: Git, Docker, Anaconda, Jupyter, Databrick, Visual Studio Code, IntelliJ, Jira, 
+    \item \textbf{Soft skills}: Collaboration, Communication, Problem-solving, Leadership,
 \end{itemize}
 }
 
@@ -135,38 +135,57 @@
 
 {\customcventry{2019/04 - present}{Senior Data Scientist}{Seeloz Inc}{San Jose, CA}{}
 {\begin{itemize}
-% \item Analyzed and built a NLP model using the Bill of Materials (BOM) and Product tables to identify the product categories. This model can category raw materials, semi-finished goods, and finished goods with 98\% to 99\% accuracy.
-% \item Developed and maintained the essential deep-Q learning network (DQN) models in SCAS Autonomous Procurement \& Inventory (AP\&I) platform to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
-% \item Developed and maintained the essential deep-Q learning network (DQN) models for inventory control to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
-\item Developed and deployed a deep-Q learning neural network (DQN) in reinforcement learning, which optimizes the supply chain management, and provides recommendations to customers. This DQN model helps customers saving \$2.05M in the inventory costs and increasing 44\% annual turnover rate.
+% \item Developed and maintained a reinforcement learning model using deep-Q learning neural network (DQN) to optimize inventory control and supply chain efficiency for a leading auto parts manufacturer in Malaysia. This model lowered the client's annual total inventory by 26\% from \$7.82M to \$5.77M and increased annual turnover rate by 44\% from 15.42 to 22.27.
+% \item Utilized SQL, Python, and Spark to analyze supply chain data and developed ensemble models using ETS, ARIMA, RandomForest, XGboost, and LSTM for time series forecasting. Achieved model accuracy ranging from 83\% to 97\% across products and boosted coverage of products by 10 times
+% \item Designed a novel approach for tackling non-convergence issues in sparse time series data by leveraging a double random forest model with postponed action and accomplished a 68\% reduction in MAE.
+% \item Developed an anomaly detection model to uncover 3-5\% anomalies in customers' ordering. Utilized this model in data engineering to improve accuracy by 9.8\% in a time series forecasting model.
+% \item Developed multi echelon single product reinforcement learning model for the world's largest oil company to optimize its oil transportation scheduling plan, reduce inventory costs, and fulfill customer demands more efficiently.
+% \item Developed a Python-based API that offers cross-platform capabilities for accessing cloud storage on GCP, Azure, and AWS. The API was adopted in all Seeloz products and significantly enhanced workflows’ efficiency and functionality.
+% \item Created dynamic dashboards with Google DataStudio and Python Dash package, enhancing accessibility and usability of critical data insights for stakeholders.
+% \item Designed a Python-based universal interface to submit batch jobs to Google AI platform, GKE, Azure VMSS, Azure ML, AKS, on-premises cluster, and local docker container.
+% \item Collaborated cross-functionally to design and implement sophisticated analytical solutions at scale, delivered high-quality outcomes that exceeded project requirements and met stakeholder needs.
+% \item Led junior data scientists on the team and facilitated resolution of project-related challenges.
+\item Analyzed clients' supply chain raw data using Python and SQL to create data ETL using PySpark.
+\item Developed the data schema and table architecture for SCAS metadata model using the raw data from Oracle ERP.
+\item Implemented a reinforcement learning model to optimize supply chain management and inventory control. Lowered annual inventory by 26\% and increased annual turnover rate by 44\%.
+\item Built time series forcasting model using ETS, ARIMA and Random Forest and achieved model accuracy from 83\% to 97\% across products.
+\item Created interactive dashboard using Python Dash and deployed on Azure using Docker. Experienced and proficient in Tableau, Power BI, Google DataStudio to visualize and analyze data.
+\item Developed a Python API offering cross-platform capabilities for accessing storage blobs on GCP, Azure, and AWS.
+\item Developed a Sell script for submitting model training jobs to Google AI platform, Azure VMSS, and on-premises cluster.
+\item Led Junior data scientists on the team and facilitated resolution of project-related challenges
+\end{itemize}
+}
+% \item Analyzed customers' supply chain data using SQL/Python/Spark and built ensemble models for time series forecasting using ETS/ARIMA/RandomForest/XGboost/LSTM. The model accuracy ranges from 93\% to 100\% for various products for different customers.
+% \item Built interactive dashboards for visualizations and quick inspections. The dashboards were constructed on the Google DataStudio at the beginning, and then ported to Python with Bokeh package now.
+% \item Built interactive dashboards for visualizations using Google DataStudio and Python Dash package. The dashboards not only visualize data but also summarize key metrics, present prediction results and analytical outcomes. 
+% \item Developed and implemented a NLP model utilizing data from Bill of Materials (BOM) and Product tables to categorize product types and achieving accuracy 98\%.
+
 %\item Reduced the inventory levels 30\% $\sim$ 70\%, which varies by warehouses and products, and retained low stock-outs by introducing the purchase-procurement splitting and postponed action methods into the model-based reinforcement learning (RL).
 % \item Applied the time series analysis and forecasting methods using Python and predicted customers' demands and orders. The models been used including ETS, ARIMA/SARIMA, VAR, long-short term memory (LSTM), and double random forest (double RF). The $r^2$ score was improved from 0.15 (using ETS model) up to 0.92 (using double RF) and the number of supported products have been increased by a factor of 20 times.
 % \item Migrated the AP\&I platform from Stable-Baselines to Ray.
 % \item Analyzed supply chain data from various clients by writing SQL queries on the Google Big Query and PostgreSQL. 
-\item Analyzed customers' supply chain data using SQL/Python/Spark and built ensemble models for time series forecasting using ETS/ARIMA/RandomForest/XGboost/LSTM. The model accuracy ranges from 93\% to 100\% for various products for different customers.
-%\item Built interactive dashboards for visualizations and quick inspections. The dashboards were constructed on the Google DataStudio at the beginning, and then ported to Python with Bokeh package now.
-\item Built interactive dashboards for visualizations using Google DataStudio and Python Dash package. The dashboards not only visualize data but also summarize key metrics, present prediction results and analytical outcomes. 
 % \item Implemented an abstraction layer (API), called Cloud I/O, on top of Azure and GCP to access the Azure storage account and Google Cloud storage. This Python-based API provides the AP\&I cross-platform functionalities.
 % \item Designed a Python-based universal interface to submit batch jobs to Google AI platform, GKE, Azure VMSS, Azure ML, AKS, on-premises cluster, and local docker container.
-\item Implemented an abstraction layer (API) on top of 3 major cloud platforms (GCP, Azure, and AWS) to access the cloud storage. This Python-based API provides the AP\&I cross-platform functionalities.
-\item Designed a Python-based universal interface to submit batch jobs to Google AI platform, GKE, Azure VMSS, Azure ML, AKS, on-premises cluster, and local docker container.
+% \item Implemented an abstraction layer (API) on top of 3 major cloud platforms (GCP, Azure, and AWS) to access the cloud storage. This Python-based API provides the AP\&I cross-platform functionalities.
 % \item Time series forecasting to forecast customers' demand, ordering, purchase-procurement splitting with the X\% accuracy for different products and customers.
 % \item Built new LSTM models using Keras for demands and orders time series data predictions and improved the $r^2$ score from 0.15 to 0.94.
-% \item Developed and maintained reinforcement learning (RL) based framework using deep-Q learning (DQN) for single and multiple echelons to optimize the profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27. %Help the customers to safe Y\% of the cost and earn Z\% revenues.
 % \item Designed an API to access the Google Cloud Storage and Microsoft Azure Storage accounts. Using this API, the users can switch between cloud service providers without modifying their code base.
 % \item Established and conducted the data processing pipeline to extract useful information from large dataset, integrated the results into Incorta database and updated the SQL queries in the dashboard.
 % \item Helped customers to reduce the costs and lost sales by performing anomaly detection and data visualization to find out the unusual distributions of inventory and procurement in customers' datasets.
 % \item Managed and upgraded the Cloudera making Spark and jupyter service run over all the Seeloz Clusters.
-% %
 % \item Suggest and explore novel solutions to data science/data visualization/data pipeline problems.
 % \item Built a time-series model for a seasonal product category to test, compare and validate supply chain team’s predictions.
 % \item Prepared structural databases to build complex data frames for team usage and provided complex business analytics, measures, visuals and insights from raw data for assortment planning management to make knowledgeable and data-driven decisions.
 % \item Designed machine learning and predictive models to test and verify the store market area definitions to the rolling-12 month collected data. This project involved data modeling and machine learning algorithm (training, testing and scoring) implementation using various predictive algorithms such as decision trees, random forest, etc.
-\item Led ML projects in reinforcement learning and time series forecasting to deliver real time models. Led visualization project to ship interactive dashboards. Led engineer project to develop universal API for accessing cloud storage from different cloud platforms.
-\item Worked cross-functionally with product managers, data engineers, and data architects, to design and deliver large-scale advanced analytic solutions
-\item Mentored less experienced data scientists in the team and helped them to fix issues in projects.
-\end{itemize}
-}
+% \item Led ML projects in reinforcement learning and time series forecasting to deliver real time models. Led visualization project to ship interactive dashboards. Led engineer project to develop universal API for accessing cloud storage from different cloud platforms.
+% \item Worked cross-functionally with product managers, data engineers, and data architects, to design and deliver large-scale advanced analytic solutions
+%\item Collaborated seamlessly with cross-functional teams, including product managers, data engineers, and data architects, to design and implement sophisticated analytical solutions at scale. By leveraging diverse perspectives and expertise, successfully delivered high-quality outcomes that exceeded project requirements and met the needs of stakeholders across the organization.
+% \item Developed and maintained reinforcement learning (RL) based framework using deep-Q learning (DQN) for single and multiple echelons to optimize the profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27. %Help the customers to safe Y\% of the cost and earn Z\% revenues.
+% \item Developed and maintained the essential deep-Q learning network (DQN) models in SCAS Autonomous Procurement \& Inventory (AP\&I) platform to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
+% \item Developed and maintained the essential deep-Q learning network (DQN) models for inventory control to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
+%\item Developed and deployed a deep-Q learning neural network (DQN) in reinforcement learning, which optimizes the supply chain management, and provides recommendations to customers. This DQN model helps customers saving \$2.05M in the inventory costs and increasing 44\% annual turnover rate.
+
+
 
 % {\customcventry{2018/07 - 2019/01}{Postdoctoral Researcher}{University of Oklahoma \& Louisiana Tech University}{Norman, OK}{}
 % {\begin{itemize}
@@ -184,34 +203,19 @@
 
 {\customcventry{2015/03 - 2018/03}{Data Scientist}{CERN (Organisation Europ\'{e}enne pour la Recherche Nucl\'{e}aire )}{Geneva, Switzerland}{}
 {\begin{itemize}
-  \item Improved the electron isolation efficiency from 93\% to 98\% by introducing the momentum distributions in spherical coordinate. The study was done using C++. This results became a new standard for all analysis at CERN.
-  \item Analyzed 400 TB data from the LHC computing Grid using C++ and Python, built decision tree and regression models, applied statistical methods to extract the signal within 95\% confidence interval.
-  \item Developed, tuned, and deployed a classification model for leptons in different energy scales using statistical and machine learning methods. The model retained the recall 98\% and reduced 20\% of the false positive rate.
+  \item Improved the electron isolation efficiency from 83\% to 99\% (a 19\% increase) by restricting the transverse energy and momentum distributions within a topological cone of 0.2 in spherical coordinate. The outcome set a new benchmark for all analysis at CERN.
+  \item Designed, optimized, and implemented a high-performing classification model for real leptons across multiple energy scales, leveraging both statistical and machine learning methodologies. This resulted in a significant improvement in the model's recall, which increased from 62\% to 98\%.
+  \item Conducted a comprehensive analysis of an extensive 400 TB dataset. Employed various modeling techniques, such as decision tree, regression, and statistical models, to deliver sophisticated solutions that effectively addressed complex project requirements.
 \end{itemize}
 }
 
 {\customcventry{2009/07 - 2011/07}{Research Scientist}{Academia Sinica}{Taipei, Taiwan}{}
 {\begin{itemize}
-  \item Developed a new Monte Carlo simulation program in C++ and GEANT4 for germanium detector.
-  \item Implemented, trained, tested, and tuned hyperparameters of decision tree and boosted ensemble models, which are written in C++, for particle classifications with accuracy ranging 96\% to 99\% depending on the particle types.
+  \item Created a Monte Carlo simulation model using C++ and GEANT4 that resulted in a 20\% increase in precision.
+  % \item Developed decision tree and boosted ensemble models using C++ and ROOT, and applied 3-fold cross-validation to enhance particle classification accuracy by approximately 10\%.
+  % \item Led cross-functional collaboration between different departments to establish remote control capabilities for experiments.
 \end{itemize}
 }
-
-{\customcventry{2006/12 - 2009/02}{R\&D Engineer}{TSMC (Taiwan Semiconductor Manufacturing Company)}{Hsinchu, Taiwan}{}
-{\begin{itemize}
-  \item Improved 40\% of the performance by creating and deploying on-prem ETL and analysis pipeline, which includes high level data cleaning, data engineering, visualization, statistical model building, and Monte Carlo simulation using C++, Bash shell script, Perl, and Excel VBA macros. 
-\end{itemize}
-}
-
-\section{EDUCATION}
-{\customcventry{2011/08/22 - 2018/05/11}{Ph.D. in Physics}{University of Oklahoma}{Norman, OK}{}{}}
-
-\end{document}
-
-
-%
-% This part is for Sinica
-%
 % \item Discovered serious bugs in simulation programs by performing exploratory data analysis on simulated data.
 % \item Programmed in C++ to redesign a bug-free Monte Carlo simulation programs.
 % \item Improved 50\% of the signal significance by devising a new classification model.
@@ -223,9 +227,13 @@
 % \item Used decision tree based methods to classify background sources and reduced the major background events by 50\%.
 % \item Classified different background using decision tree based methods, automated the analysis results visualization processes, and reported the finding.
 
-%
-% This part is for TSMC
-%
+{\customcventry{2006/12 - 2009/02}{R\&D Engineer}{TSMC (Taiwan Semiconductor Manufacturing Company)}{Hsinchu, Taiwan}{}
+{\begin{itemize}
+  \item Performed rigorous statistical analysis to develop models for advanced IC devices with cutting-edge technology.
+  % \item Achieved a 40\% improvement in performance by designing and deploying an ETL and analysis pipeline on-premises.
+  % \item Managed 7 projects by defining project scopes, allocating resources, scheduling and monitoring project progress, and coordinating cross-functional teams to ensure timely and high-quality project delivery.
+\end{itemize}
+}
 % \item Developed C/C++ programs for the measurement system to automate raw data collection processes which results in 1.5$\times$ $\sim$ 3$\times$ speed improvements depending on the scope of measurements.
 %clean the measured raw data, apply feature engineering to extract significant features for modeling, build clustering and multi-dimentional regression models for various device types, utilize statistical models to finalize device parameters in the 95\% confidence interval, validate model performance by running MC simulation and build confusion matrix, and visualize the Id-Vg and Id-Vd distributions.
 % \item Led and managed 7 projects to coordinate effectively with the cross-functional teams and clients, defined the project specifications (SPEC) and schedules, created standard operating procedures (SOP) for various analysis steps, documented the usages and performances of all device models in the project SPEC for the clients.
@@ -243,6 +251,12 @@
 % \item Built analysis pipeline to clean and visualize data.
 %\item Coordinated effectively with cross-functional teams and clients to resolve issues with tight deadlines.
 % \item Completed an urgent project 2 months ahead of the normal schedule and saved the contract.
+
+\section{EDUCATION}
+{\customcventry{2011 - 2018}{Ph.D. in Physics}{University of Oklahoma}{Norman, OK}{}{}}
+% {\customcventry{2003 - 2006}{M.S. in Physics}{National Taiwan University}{Taipei, Taiwan}{}{}}
+% {\customcventry{1998 - 2002}{B.S. in Physics}{Chung Yuan Christian University}{Chung Li, Taiwan}{}{}}
+\end{document}
 
 
 % \section{PROJECTS}
